--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,7 @@
 	},
 	"dependencies": {
 		"@ecopages/logger": "latest",
-		"@parcel/watcher": "^2.4.0",
+		"chokidar": "^4.0.3",
 		"ghtml": "^3.1.2"
 	},
 	"devDependencies": {
