--- a/playground/global/package.json
+++ b/playground/global/package.json
@@ -6,7 +6,8 @@
 		"dev": "bun run app.ts --dev",
 		"build": "bun run app.ts --build",
 		"preview": "bun run app.ts --preview",
-		"watch:dev": "bun --watch run app.ts --dev"
+		"watch:dev": "bun --watch run app.ts --dev",
+		"hot:dev": "bun --hot run app.ts --dev"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
