--- a/biome.json
+++ b/biome.json
@@ -1,6 +1,12 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
-	"assist": { "actions": { "source": { "organizeImports": "on" } } },
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on"
+			}
+		}
+	},
 	"linter": {
 		"enabled": true,
 		"rules": {
@@ -51,8 +57,8 @@
 		"formatter": {
 			"enabled": true,
 			"lineWidth": 120,
-			"indentWidth": 2,
-			"indentStyle": "space",
+			"indentWidth": 4,
+			"indentStyle": "tab",
 			"quoteStyle": "single",
 			"trailingCommas": "all",
 			"semicolons": "always",
