chore: temp fix issue with postcss circular ref

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,11 +2,17 @@
 	"name": "@ecopages/core",
 	"version": "0.1.41",
 	"description": "Core package for Ecopages",
-	"keywords": ["ecopages", "core", "ssg"],
+	"keywords": [
+		"ecopages",
+		"core",
+		"ssg"
+	],
 	"license": "MIT",
 	"main": "./src/index.ts",
 	"type": "module",
-	"files": ["src"],
+	"files": [
+		"src"
+	],
 	"bin": {
 		"ecopages": "./src/bin/ecopages.ts"
 	},
