refactor(global): Move from bun-types to @types/bun

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,8 @@
 		"ghtml": "^3.1.2"
 	},
 	"devDependencies": {
-		"bun-types": "latest"
+		"@ecopages/bun-postcss-loader": "workspace:*",
+		"@types/bun": "latest"
 	},
 	"exports": {
 		".": {
