--- a/packages/plugins/bun-inline-css-plugin/package.json
+++ b/packages/plugins/bun-inline-css-plugin/package.json
@@ -23,6 +23,7 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"devDependencies": {
+		"@types/bun": "latest",
 		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/logger": "latest"
 	}
