--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"bump:patch": "bun run scripts/bump-version.ts patch && bun run jsr:sync-version",
 		"bump:minor": "bun run scripts/bump-version.ts minor && bun run jsr:sync-version",
 		"bump:major": "bun run scripts/bump-version.ts major && bun run jsr:sync-version",
-		"commit": "better-commits"
+		"commit": "better-commits",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
@@ -37,6 +38,8 @@
 		"husky": "^9.0.10",
 		"lint-staged": "^15.2.2",
 		"oxlint": "^1.32.0",
+		"@ecopages/bun-postcss-loader": "workspace:*",
+		"@ecopages/bun-mdx-kitajs-loader": "workspace:*",
 		"prettier": "^3.7.4"
 	},
 	"module": "src/index.js",
