--- a/packages/processors/postcss-processor/tsconfig.json
+++ b/packages/processors/postcss-processor/tsconfig.json
@@ -14,7 +14,6 @@
 		"strict": true,
 		"target": "ES2021",
 		"useDefineForClassFields": true,
-		"verbatimModuleSyntax": true,
-		"types": ["bun-types"]
+		"verbatimModuleSyntax": true
 	}
 }
