refactor(global): Fixed hoisting in workspace

--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -12,7 +12,9 @@
 	"types": "./src/react.plugin.ts",
 	"type": "module",
 	"files": [
-		"src"
+		"src",
+		"react-esm.ts",
+		"react-dom-esm.ts"
 	],
 	"exports": {
 		".": {
