--- a/packages/core/fixtures/app/package.json
+++ b/packages/core/fixtures/app/package.json
@@ -11,6 +11,6 @@
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
-		"@ecopages/bun-mdx-kitajs-loader": "workspace:*"
+		"@ecopages/mdx": "workspace:*"
 	}
 }
