--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -24,6 +24,12 @@
 	},
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
-		"@ecopages/core": "workspace:*"
+		"@ecopages/core": "workspace:*",
+		"react": "^19",
+		"react-dom": "^19"
+	},
+	"dependencies": {
+		"@mdx-js/esbuild": "^3.0.1",
+		"@mdx-js/mdx": "^3.1.0"
 	}
 }
