refactor(global): Migrate type declaration imports to ES module syntax, update eco.config baseUrl, and improve image processor type generation.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,12 @@
 			"require": "./src/index.ts",
 			"types": "./src/public-types.ts"
 		},
+		"./declarations": {
+			"types": "./src/declarations.d.ts"
+		},
+		"./env": {
+			"types": "./src/env.d.ts"
+		},
 		"./config-builder": {
 			"types": "./src/config/config-builder.ts",
 			"default": "./src/config/config-builder.ts"
