--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -31,5 +31,11 @@
 	"dependencies": {
 		"@mdx-js/esbuild": "^3.0.1",
 		"@mdx-js/mdx": "^3.1.0"
+	},
+	"devDependencies": {
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	}
 }
