feat(transition): added services for eco router

--- a/packages/transitions/package.json
+++ b/packages/transitions/package.json
@@ -13,7 +13,11 @@
 	"type": "module",
 	"exports": {
 		".": "./src/index.ts",
-		"./client": "./src/client/eco-router.ts"
+		"./client": "./src/client/eco-router.ts",
+		"./src/styles.css": {
+			"import": "./src/styles.css",
+			"require": "./src/styles.css"
+		}
 	},
 	"files": [
 		"src"
