--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,5 +59,5 @@ jobs:
             - name: Publish package @ecopages/react
               run: bun run --filter @ecopages/react release:jsr
 
-            - name: Publish package @ecopages/transition
-              run: bun run --filter @ecopages/transition release:jsr
+            - name: Publish package @ecopages/browser-router
+              run: bun run --filter @ecopages/browser-router release:jsr
