feat(browser-router): integrate morphdom for DOM diffing, remove scrollPersistAttribute (morphdom handles scroll), auto-set NODE_ENV in parseCliArgs, fix docs events

--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -32,6 +32,7 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
-		"@ecopages/core": "workspace:*"
+		"@ecopages/core": "workspace:*",
+		"morphdom": "^2.7.4"
 	}
 }
