Feature/browser-router (#113)
* feat(transitions): introduced @ecopages/transitions package with client-side router for view transitions.

* feat(transition): added services for eco router

* feat(transition): added examples in docs and playground global

* feat(docs): Add transitions documentation and rehype table wrapper, update docs theme and fonts.

* feat(transition): Add `smoothScroll` option to `EcoRouter` and implement smooth scrolling behavior in `ScrollManager`.

* feat(docs): Implement automatic light/dark theme switching for code blocks and add dark mode Shiki styling.

* feat(transitions): Add Vitest browser tests for eco-router, configure CI/CD for publishing transitions, and update dependencies.

* feat(browser-router): replace @ecopages/transitions with @ecopages/browser-router and updated docs

* style(docs): update 404 page code text opacity and font size

* feat(docs): clarify browser-router compatibility, specifically its incompatibility with React/Preact.

* feat(browser-router): integrate morphdom for DOM diffing, remove scrollPersistAttribute (morphdom handles scroll), auto-set NODE_ENV in parseCliArgs, fix docs events

* feat(browser-router): Updated LICENSE

* fix: Updated HMR script tag by removing data-eco-persist

* feat(browser-router): add createRouter helper in docs and refactor event listener binding in `EcoRouter`.

* chore: rename prepare script to prepare:husky

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,3 +58,6 @@ jobs:
 
             - name: Publish package @ecopages/react
               run: bun run --filter @ecopages/react release:jsr
+
+            - name: Publish package @ecopages/browser-router
+              run: bun run --filter @ecopages/browser-router release:jsr
