--- a/playground/global/package.json
+++ b/playground/global/package.json
@@ -2,10 +2,10 @@
 	"name": "@ecopages/playground-global",
 	"private": true,
 	"scripts": {
-		"start": "NODE_ENV=production bun run app.ts",
+		"start": "bun run app.ts",
 		"dev": "bun run app.ts --dev",
-		"build": "NODE_ENV=production bun run app.ts --build",
-		"preview": "NODE_ENV=production bun run app.ts --preview",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
 		"watch:dev": "bun --watch run app.ts --dev",
 		"hot:dev": "bun --hot run app.ts --dev"
 	},
@@ -16,6 +16,7 @@
 		"@ecopages/kitajs": "workspace:*",
 		"@ecopages/lit": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
+		"@ecopages/browser-router": "workspace:*",
 		"@ecopages/image-processor": "workspace:*",
 		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
