--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,6 +17,11 @@
 		"@ecopages/radiant": "latest",
 		"@ecopages/browser-router": "workspace:*",
 		"remark-gfm": "^4.0.1",
-		"shiki": "^1.1.2"
+		"rehype-pretty-code": "^0.14.1",
+		"@rehype-pretty/transformers": "^0.13.2",
+		"shiki": "^3.20.0"
+	},
+	"dependencies": {
+		"rehype-raw": "^7.0.0"
 	}
 }
