--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -26,12 +26,35 @@
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/core": "workspace:*",
 		"@ecopages/logger": "latest",
-		"@types/postcss-import": "^14.0.3",
-		"autoprefixer": "^10.4.16",
-		"cssnano": "^6.0.2",
-		"postcss": "^8.4.32",
-		"postcss-import": "^15.1.0",
-		"tailwindcss": "^3.4.1"
+		"postcss": "^8.4.32"
+	},
+	"peerDependencies": {
+		"@tailwindcss/postcss": ">=4",
+		"@types/postcss-import": ">=14",
+		"autoprefixer": ">=10",
+		"cssnano": ">=6",
+		"postcss-import": ">=15",
+		"tailwindcss": ">=3"
+	},
+	"peerDependenciesMeta": {
+		"@tailwindcss/postcss": {
+			"optional": true
+		},
+		"@types/postcss-import": {
+			"optional": true
+		},
+		"autoprefixer": {
+			"optional": true
+		},
+		"cssnano": {
+			"optional": true
+		},
+		"postcss-import": {
+			"optional": true
+		},
+		"tailwindcss": {
+			"optional": true
+		}
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
@@ -46,13 +69,21 @@
 			"default": "./src/postcss-processor.ts",
 			"types": "./src/postcss-processor.ts"
 		},
-		"./default-plugins": {
-			"default": "./src/default-plugins.ts",
-			"types": "./src/default-plugins.ts"
-		},
 		"./plugin": {
 			"default": "./src/plugin.ts",
 			"types": "./src/plugin.ts"
+		},
+		"./presets": {
+			"default": "./src/presets/index.ts",
+			"types": "./src/presets/index.ts"
+		},
+		"./presets/tailwind-v3": {
+			"default": "./src/presets/tailwind-v3.ts",
+			"types": "./src/presets/tailwind-v3.ts"
+		},
+		"./presets/tailwind-v4": {
+			"default": "./src/presets/tailwind-v4.ts",
+			"types": "./src/presets/tailwind-v4.ts"
 		}
 	}
 }
