--- a/packages/loaders/bun-postcss-loader/package.json
+++ b/packages/loaders/bun-postcss-loader/package.json
@@ -23,5 +23,8 @@
 	},
 	"dependencies": {
 		"@ecopages/postcss-processor": "workspace:*"
+	},
+	"devDependencies": {
+		"tailwindcss": "^3.4.19"
 	}
 }
