--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -14,7 +14,8 @@
 		"@ecopages/radiant": "latest",
 		"@ecopages/react": "npm:@jsr/ecopages__react@latest",
 		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0"
+		"@types/react-dom": "^19.0.0",
+		"tailwindcss": "^3.4.19"
 	},
 	"dependencies": {
 		"react": "^19.0.0",
