--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -26,30 +26,17 @@
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/core": "workspace:*",
 		"@ecopages/logger": "latest",
-		"postcss": "^8.4.32"
+		"autoprefixer": "^10.4.0",
+		"cssnano": "^6.0.0",
+		"postcss": "^8.4.32",
+		"postcss-import": "^15.0.0"
 	},
 	"peerDependencies": {
 		"@tailwindcss/postcss": ">=4",
-		"@types/postcss-import": ">=14",
-		"autoprefixer": ">=10",
-		"cssnano": ">=6",
-		"postcss-import": ">=15",
 		"tailwindcss": ">=3"
 	},
 	"peerDependenciesMeta": {
 		"@tailwindcss/postcss": {
-			"optional": true
-		},
-		"@types/postcss-import": {
-			"optional": true
-		},
-		"autoprefixer": {
-			"optional": true
-		},
-		"cssnano": {
-			"optional": true
-		},
-		"postcss-import": {
 			"optional": true
 		},
 		"tailwindcss": {
@@ -58,7 +45,8 @@
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"postcss-simple-vars": "^7.0.1"
+		"postcss-simple-vars": "^7.0.1",
+		"tailwindcss": "^3.4.19"
 	},
 	"exports": {
 		".": {
