--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -45,6 +45,7 @@
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
+		"@types/postcss-import": "^14",
 		"postcss-simple-vars": "^7.0.1",
 		"tailwindcss": "^3.4.19"
 	},
