--- a/packages/core/fixtures/app/package.json
+++ b/packages/core/fixtures/app/package.json
@@ -2,10 +2,10 @@
 	"name": "@ecopages/fixture",
 	"version": "0.0.1",
 	"scripts": {
-		"start": "NODE_ENV=production bun run app.ts",
+		"start": "bun run app.ts",
 		"dev": "bun run app.ts --dev",
-		"build": "NODE_ENV=production bun run app.ts --build",
-		"preview": "NODE_ENV=production bun run app.ts --preview",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
 		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
