--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -21,8 +21,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-aria-components": "^1.6.0",
-		"@tanstack/react-table": "^8.20.6",
-		"tailwindcss": "^3.4.19"
+		"@tanstack/react-table": "^8.20.6"
 	},
 	"overrides": {
 		"@types/react": "^19.0.0",
