--- a/examples/starter-jsx/package.json
+++ b/examples/starter-jsx/package.json
@@ -2,20 +2,20 @@
 	"name": "@ecopages/starter-lit-jsx",
 	"private": true,
 	"scripts": {
-		"start": "NODE_ENV=production bun run app.ts",
+		"start": "bun run app.ts",
 		"dev": "bun run app.ts --dev",
-		"build": "NODE_ENV=production bun run app.ts --build",
-		"preview": "NODE_ENV=production bun run app.ts --preview",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
 		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
-		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/image-processor": "npm:@jsr/ecopages__image-processor@latest",
 		"@ecopages/kitajs": "npm:@jsr/ecopages__kitajs@latest",
 		"@ecopages/mdx": "npm:@jsr/ecopages__mdx@latest",
 		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
-		"@ecopages/scripts-injector": "latest"
+		"@ecopages/scripts-injector": "latest",
+		"tailwindcss": "^3.4.19"
 	}
 }
