--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -9,13 +9,13 @@
 		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
-		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
 		"@ecopages/react": "npm:@jsr/ecopages__react@latest",
 		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0"
+		"@types/react-dom": "^19.0.0",
+		"tailwindcss": "^3.4.19"
 	},
 	"dependencies": {
 		"react": "^19.0.0",
