--- a/packages/loaders/bun-postcss-loader/package.json
+++ b/packages/loaders/bun-postcss-loader/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ecopages/bun-postcss-loader",
-	"version": "0.1.50",
-	"description": "Bun loader to load postcss file",
+	"version": "0.1.51",
+	"description": "Bun loader to process css files with PostCSS",
 	"keywords": [
 		"bun",
 		"loader",
@@ -23,5 +23,8 @@
 	},
 	"dependencies": {
 		"@ecopages/postcss-processor": "workspace:*"
+	},
+	"devDependencies": {
+		"tailwindcss": "^3.4.19"
 	}
 }
