--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/postcss-processor",
-	"version": "0.1.50",
+	"version": "0.1.51",
 	"description": "Postcss processor, transform string or postcss file to css",
 	"keywords": [
 		"postcss",
@@ -26,16 +26,28 @@
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/core": "workspace:*",
 		"@ecopages/logger": "latest",
-		"@types/postcss-import": "^14.0.3",
-		"autoprefixer": "^10.4.16",
-		"cssnano": "^6.0.2",
+		"autoprefixer": "^10.4.0",
+		"cssnano": "^6.0.0",
 		"postcss": "^8.4.32",
-		"postcss-import": "^15.1.0",
-		"tailwindcss": "^3.4.1"
+		"postcss-import": "^15.0.0"
+	},
+	"peerDependencies": {
+		"@tailwindcss/postcss": ">=4",
+		"tailwindcss": ">=3"
+	},
+	"peerDependenciesMeta": {
+		"@tailwindcss/postcss": {
+			"optional": true
+		},
+		"tailwindcss": {
+			"optional": true
+		}
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"postcss-simple-vars": "^7.0.1"
+		"@types/postcss-import": "^14",
+		"postcss-simple-vars": "^7.0.1",
+		"tailwindcss": "^3.4.19"
 	},
 	"exports": {
 		".": {
@@ -46,13 +58,21 @@
 			"default": "./src/postcss-processor.ts",
 			"types": "./src/postcss-processor.ts"
 		},
-		"./default-plugins": {
-			"default": "./src/default-plugins.ts",
-			"types": "./src/default-plugins.ts"
-		},
 		"./plugin": {
 			"default": "./src/plugin.ts",
 			"types": "./src/plugin.ts"
+		},
+		"./presets": {
+			"default": "./src/presets/index.ts",
+			"types": "./src/presets/index.ts"
+		},
+		"./presets/tailwind-v3": {
+			"default": "./src/presets/tailwind-v3.ts",
+			"types": "./src/presets/tailwind-v3.ts"
+		},
+		"./presets/tailwind-v4": {
+			"default": "./src/presets/tailwind-v4.ts",
+			"types": "./src/presets/tailwind-v4.ts"
 		}
 	}
 }
