--- a/playground/global/package.json
+++ b/playground/global/package.json
@@ -19,11 +19,11 @@
 		"@ecopages/browser-router": "workspace:*",
 		"@ecopages/image-processor": "workspace:*",
 		"@ecopages/postcss-processor": "workspace:*",
-		"@ecopages/bun-postcss-loader": "workspace:*",
 		"@faker-js/faker": "9.7.0",
 		"@types/alpinejs": "^3.13.6",
 		"alpinejs": "^3.13.10",
-		"shiki": "^1.1.2"
+		"shiki": "^1.1.2",
+		"tailwindcss": "^3.4.19"
 	},
 	"repository": "https://github.com/ecopages/ecopages.git"
 }
