chore: Update @tailwindcss/postcss dependency by relaxing peer constraint and adding as dev dependency.

--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -44,6 +44,7 @@
 		}
 	},
 	"devDependencies": {
+		"@tailwindcss/postcss": "^4.1.18",
 		"@types/bun": "latest",
 		"@types/postcss-import": "^14",
 		"postcss-simple-vars": "^7.0.1",
