feat(file-system): create runtime-agnostic file-system package with Bun and Node adapters

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,7 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
+		"@ecopages/file-system": "workspace:*",
 		"@ecopages/logger": "latest",
 		"chokidar": "^4.0.3",
 		"ghtml": "^3.1.2"
