--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ public/js
 **/*.log
 **/*.bun
 **/__screenshots__
+
+# local improvement tracking (details in ~/.gemini artifacts)
+**/.improvements/
