--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/core": "workspace:*",
+		"@ecopages/file-system": "workspace:*",
 		"@ecopages/logger": "latest",
 		"autoprefixer": "^10.4.0",
 		"browserslist": "^4.28.1",
