feat(file-system): Added JSR publishing workflow

--- a/packages/file-system/package.json
+++ b/packages/file-system/package.json
@@ -22,7 +22,8 @@
 	},
 	"scripts": {
 		"test": "bun test",
-		"benchmark": "bun run test/benchmark.ts"
+		"benchmark": "bun run test/benchmark.ts",
+		"release:jsr": "bunx jsr publish"
 	},
 	"exports": {
 		".": {
