--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,9 @@ jobs:
             - name: Publish package @ecopages/bun-inline-css-plugin
               run: bun run --filter @ecopages/bun-inline-css-plugin release:jsr
 
+            - name: Publish package @ecopages/file-system
+              run: bun run --filter @ecopages/file-system release:jsr
+
             - name: Publish package @ecopages/core
               run: bun run --filter @ecopages/core release:jsr
 
