Feature/file system (#117)
* feat(file-system): create runtime-agnostic file-system package with Bun and Node adapters

* feat(file-system): Added JSR publishing workflow

* feat(docs): add File System documentation page and update navigation configuration.

* feat(file-system): Implement writeAsync in Bun adapter using Bun.write for optimized I/O, documented with benchmarks.

* chore: 0.1.54 > 0.1.55

--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/image-processor",
-	"version": "0.1.54",
+	"version": "0.1.55",
 	"description": "Image processor, transform and optimize images for web",
 	"keywords": [
 		"image",
@@ -24,6 +24,7 @@
 		"@ecopages/core": "workspace:*"
 	},
 	"dependencies": {
+		"@ecopages/file-system": "workspace:*",
 		"@ecopages/logger": "latest",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
