--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/core",
-	"version": "0.1.54",
+	"version": "0.1.55",
 	"description": "Core package for Ecopages",
 	"keywords": [
 		"ecopages",
@@ -22,6 +22,7 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
+		"@ecopages/file-system": "workspace:*",
 		"@ecopages/logger": "latest",
 		"chokidar": "^4.0.3",
 		"ghtml": "^3.1.2"
